--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="first-sec">
+    <section class="first-sec  background">
         <div class="first-line">
             <ul>
                 <li><a href="#">C: 01608804831</a></li>
@@ -36,9 +36,9 @@
             </div>
         </div>
     </section>
-    <section class="third-line">
+    <section class="third-line background">
         <div>
-            <h1 class="text head">Everything you need for success </h1>
+            <h1 class="head">Everything you need for success </h1>
             <h1 class="head">online</h1>
             <ul class="text">
                 <li>Domain names, hosting & email</li>
@@ -47,6 +47,26 @@
                 <li>Support & training</li>
                 <li>PLUS free advice to help you succeed</li>
             </ul>
+        </div>
+    </section>
+    <section class="second-sec">
+        <div id="one">
+            <h1>Website Design</h1>
+            <p>Get a high quality, high converting business website designed and built for your business, optimised for
+                all devices.</p>
+            <button>Find out more</button>
+        </div>
+        <div id="two">
+            <h1>Website Marketing</h1>
+            <p>Attract leads and sales for your business by marketing it on Google. We utilise SEO & paid search
+                strategies to attract new customers.</p>
+            <button>Find out more</button>
+        </div>
+        <div id="three">
+            <h1>Hosting & Support</h1>
+            <p>A full range of website support services including domain names, site amendments, hosting, email,
+                training and more.</p>
+            <button>Find out more</button>
         </div>
     </section>
 </body>
