--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <li><a href="#">C: 01608804831</a></li>
                 <li><a href="#">Guide To SEO for 2019</a></li>
                 <li><a href="#">get free advice now</a></li>
-                <li id="facebook"><a target="_blank" href="https://www.facebook.com/cocking.is">f</a></li>
+                <li id="facebook"><a target="_blank" href="https://www.facebook.com/cocking.is"><img
+                            src="https://static.xx.fbcdn.net/rsrc.php/yb/r/hLRJ1GG_y0J.ico" alt=""></a></li>
             </ul>
         </div>
         <div class="second-line">
@@ -50,25 +51,62 @@
         </div>
     </section>
     <section class="second-sec">
-        <div id="one">
+        <div id="one" class="shadow">
             <h1>Website Design</h1>
             <p>Get a high quality, high converting business website designed and built for your business, optimised for
                 all devices.</p>
-            <button>Find out more</button>
+            <button>
+                <a target="_blank" href="https://www.samsonwebdesign.co.uk/website-design-services/">Find out
+                    more</a>
+            </button>
         </div>
-        <div id="two">
+        <div id="two" class="shadow">
             <h1>Website Marketing</h1>
             <p>Attract leads and sales for your business by marketing it on Google. We utilise SEO & paid search
                 strategies to attract new customers.</p>
-            <button>Find out more</button>
+            <button>
+                <a target="-blank" href="https://www.samsonwebdesign.co.uk/website-marketing-services/">Find out
+                    more</a>
+            </button>
         </div>
-        <div id="three">
+        <div id="three" class="shadow">
             <h1>Hosting & Support</h1>
             <p>A full range of website support services including domain names, site amendments, hosting, email,
                 training and more.</p>
-            <button>Find out more</button>
+            <button>
+                <a target="_blank" href="https://www.samsonwebdesign.co.uk/website-support/">Find out
+                    more</a>
+            </button>
         </div>
     </section>
+    <section class="section-third">
+        <div class="sec-third-div">
+            <h2>Help & Support</h2>
+            <ul>
+                <li>Free Business Website Advice</li>
+                <li>Telephone Support</li>
+                <li>Website Maintenance</li>
+                <li>Domain Names</li>
+                <li>Business Email</li>
+                <li>Website Hosting</li>
+                <li>Logo Design</li>
+                <li>Website Hack Repair</li>
+                <li>About Samson Web Design</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div class="sec-third-div">
+            <h2>About Us</h2>
+            <p>Established in 2006, Samson Web Design has helped 100’s of businesses grow online.</p>
+            <p>We work with our customers closely to understand their business goals and help them find a way to achieve
+                them. We know how to generate sales, leads and ultimately money, for virtually any type of business.
+            </p>
+        </div>
+    </section>
+
+    <footer>©2020 Samson Web Design Limited | 30 Trent Road, Worthing, West Sussex BN12 4EL | 01903 368559 | privacy
+        policy
+    </footer>
 </body>
 
 </html>
